Fix the display of content inside the top users container on small screen

--- a/src/styles/FollowButtons.module.css
+++ b/src/styles/FollowButtons.module.css
@@ -36,16 +36,16 @@
     color: #fff;
 }
 
-  /* Remove follow/unfollow buttons on medium-small screens */
+/* Remove follow/unfollow buttons on medium-small screens */
 @media all and (max-width: 991px) {
     .FollowButtonsRemove {
       display: none;
     }
 }
 
-  /* Adjust display of the top users container follow buttons, user icon & name */
+/* Adjust display of the follow buttons centered below the username */
 @media all and (max-width: 768px) {
     .FollowButtonsRemove {
-      display: block;
+      display: contents;
     }
 }
